app/assets/stylesheets/application/pages/home.scss
.static_pages.home {
  // Navbar
  .navbar {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
  }
  hr {
    margin: 30px 100px;
    margin-top: 20px;
  }
  .hero {
    position: relative;
    height: 100vh;
    min-height: 400px;
    z-index: 1;
    background-position: center;
    background-size: cover;
    background-image: image-url("home.jpg");
    &:before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background-color: #000000;
      opacity: 0.4;
    }
    .hero-info {
      @include vertical-align(relative);
      text-align: center;
      z-index: 100;
      .btn-cta {
        border-radius: 4px;
        font-size: 18px;
        padding: 13px 24px 15px;
        background-color: #1ca298;
        font-weight: 400;
        color: white;
        &:active {
          box-shadow: none;
        }
      }
      h1 {
        font-size: 50px;
        margin-top: 0;
        margin-bottom: 10px;
        color: white;
        font-weight: 300;
        letter-spacing: 2px;
        @include bp-medium {
          font-size: 40px;
        }
        @include bp-small {
          font-size: 35px;
          padding: 20px 20px 0 20px;
          margin-bottom: 20px;
        }
      }
      h3 {
        font-size: 21px;
        font-weight: 200;
        letter-spacing: -0.5px;
        color: white;
        margin-bottom: 30px;
        @include bp-medium {
          font-size: 23px;
          font-weight: 400;
        }
        @include bp-small {
          font-size: 18px;
          padding-left: 20px;
          padding-right: 20px;
        }
      }
    }
  }
}

.cities {
  background-color: #f8f8fa;
  > h2 {
    margin: 0;
    padding-top: 50px;
    padding-bottom: 0px;
    font-weight: 200;
    font-size: 45px;
  }
  .hint {
    color: #1ca298;
    font-size: 18px;
    font-weight: 200;
    font-style: italic;
    margin-bottom: 35px;
  }
  .row > div {
    padding: 10px
  }
  .picture-wrapper {
    position: relative;
    float: left;
    width: 100%;
    .city-picture {
      position: relative;
      &:before {
        display: block;
        content: "";
        width: 100%;
        padding-top: 66.66666667%;
      }
      a {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        &:before {
          content: '';
          z-index: 3;
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          background-color: #000000;
          opacity: 0.3;
        }
        &:hover {
          text-decoration: none !important;
        }
        img {
          width: 100%;
          height: 100%;
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
        }
      }
      .city-title {
        position: relative;
        z-index: 4;
        color: #FFFFFF;
        font-size: 30px;
        margin-top: 28%;
      }
      .new-city {
        background-color: #09A298;
        &:before {
          background-color: transparent;
        }
      }
    }
  }
}

// Bouncing angle down

@include keyframes(bouncing) {
  0% {bottom: 0;}
  50% {bottom: 10px;}
  100% {bottom: 0;}
}

.scroll-down {
  text-align: center;
  position: absolute;
  bottom: 0;
  color: white;
  opacity: 0.7;
  left: 0;
  right: 0;
  div:first-child {
    position: relative;
    @include animation-name(bouncing);
    @include animation-duration(2s);
    @include animation-iteration-count(infinite);
    @include animation-delay(1s);
  }
  i {
    cursor: pointer;
  }
  div:last-child {
    margin-bottom: 10px;
    margin-top: -10px;
  }
}

.testimonial {
  position: relative;
  padding-top: 40px;
  height: 100%;
  h2 {
    font-weight: 200;
    font-size: 45px;
  }
  @include bp-small {
    height: auto;
    h2 {
      margin-bottom: 50px !important;
    }
  }
  .content-wrapper {
    margin-top: 80px;
    h3 {
       color: black;
    }
    .job {
      color: #09A298;
    }
    p {
      font-weight: 200;
      color: #b1b1b1;
      font-size: 16px;
      line-height: 1.5em;
      margin: 20px 0;
      font-style: italix;
      @include bp-medium {
        font-size: 18px;
      }
      @include bp-small {
        font-size: 23px;
      }
    }
    .icon-wrapper {
      height: 90px;
      margin-left: auto;
      margin-right: auto;
      background-size: 100%;
      width: 220px;
      height: 220px;
      border-radius: 100%;
    }
    #glass-icon {
      background-image: asset-url('users/camille.jpg');
      background-repeat: no-repeat;
    }
    #label-icon {
      background-image: asset-url('users/vincent.jpg');
      background-repeat: no-repeat;
    }
    #discount-icon {
      background-image: asset-url('users/marie.jpg');
      background-repeat: no-repeat;
    }
    @include bp-small {
      padding: 0;
      .row {
        margin-left: 0;
        margin-right: 0;
      }
      div + div {
        margin-top: 30px;
      }
    }
  }
}

.press {
  .icon {
    text-align: center;
    img {
      width: 150px;
    }
    @include bp-medium {
      margin: 10px;
    }
  }
  .icon-wedemain {
    img {
      width: 76px;
    }
  }
  .icon-le-par {
    padding-left: 30px;
  }
  .icon-20-min {
    @include bp-min($screen-md) {
      width: 12%;
      padding-right: 0px;
      padding-left: 45px;
    }
    img {
      width: 55px;
      padding-right: 0;
    }
  }
}

footer {
  margin-bottom: 25px;
  .social-icon {
    margin-bottom: 20px;
  }
  svg:hover {
    g {
      fill: #09A298;
    }
  }
  p {
    margin: 0;
  }
}

